unpackaged/main/default/objects/Provider_Demographic__c/Provider_Demographic__c.object-meta.xml
<CustomObject>
    <label>Provider Demographic</label>
    <nameField>
        <displayFormat>PD-{0000000}</displayFormat>
        <label>Provider Demographic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>