unpackaged/main/default/objects/Provider_Demographic__c/fields/External_Prior_Authorization__c.field-meta.xml
<CustomField>
    <fullName>External_Prior_Authorization__c</fullName>
    <label>External Prior Authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>