unpackaged/main/default/objects/Provider_Demographic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Prudent_In_Data_Staging_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Service_Provider_Fax__c</columns>
    <columns>Service_Provider_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>